[package]
name = "owned-alloc"
version = "0.1.0"
authors = ["Bruno Zimmermann <brunoczim@gmail.com>"]
description = "A crate to help reducing manual memory management errors."
repository = "https://gitlab.com/bzim/owned-alloc"
readme = "README.md"
license = "MIT"
keywords = ["memory", "raw-vec", "manual-memory", "owned-allocation", "dynamic-allocation"]
categories = ["memory-management", "rust-patterns", "data-structures"]
